# gfs

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_STYLE.md  COPYRIGHT  README.md  TODO  TODO.md  build-requirements.txt  build.bat  build.sh  build_clean.bat  build_debug.bat  build_docs.bat  conanfile.py  docs-requirements.txt  gfs.cap  gfs.sublime-project  gfs_assert.h  gfs_bmp.h  gfs_bmr.cpp  gfs_bmr.hpp  gfs_color.c  gfs_color.h  gfs_color.hpp  gfs_fs.c  gfs_fs.h  gfs_game.c  gfs_game.h  gfs_game_state.h  gfs_geom.hpp  gfs_geometry.c  gfs_geometry.h  gfs_geometry.hpp  gfs_io.c  gfs_io.h  (+44 more)
Code/: Assert.hpp  BitmapPicture.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Macros.hpp  Memory.cpp  Memory.hpp  Physics.cpp  Physics.hpp  Platform.hpp  PlatformWin32.cpp  Render.cpp  Render.hpp  StaticAssert.hpp  String.cpp  String.hpp  Types.hpp  WaveAudio.cpp  WaveAudio.hpp
Docs/: HandmadeHero_Audio.md
assets/: atlas.aseprite  basic.frag.glsl  basic.vert.glsl  chunk.vert.glsl  dirt.aseprite  dirt.xcf
assets/breakout/: basic.frag.glsl  basic.vert.glsl  sprite.frag.glsl  sprite.vert.glsl  text.frag.glsl  text.vert.glsl
code/: gfs_assert.h  gfs_bmp.c  gfs_bmp.h  gfs_game.c  gfs_game.h  gfs_game_state.c  gfs_memory.c  gfs_memory.h  gfs_physics.c  gfs_physics.h  gfs_platform.h  gfs_platform_win32.c  gfs_render.c  gfs_render.h  gfs_render_opengl.c  gfs_render_opengl.h  gfs_string.c  gfs_string.h  gfs_types.h  gfs_wave.c  gfs_wave.h
code/gfs/: CMakeLists.txt
code/gfs/include/gfs/: assert.h  atlas.h  bmp.h  entry.h  game.h  game_state.h  macros.h  memory.h  physics.h  platform.h  random.h  render.h  render_opengl.h  static_assert.h  string.h  types.h  wave.h
code/gfs/src/: atlas.c  bmp.c  game_state.c  memory.c  physics.c  platform_linux.c  platform_win32.c  random.c  render.c  render_opengl.c  string.c  wave.c
demos/badcraft/: CMakeLists.txt  basic.frag.glsl  basic.vert.glsl  camera.cpp  camera.hpp  main.cpp  mainloop.c  meshes.hpp
demos/breakout/: CMakeLists.txt  breakout_entry.c  breakout_render.c  breakout_render.h  breakout_sound.c  breakout_sound.h  entry.c  mainloop.c  render.c  render.h  sound.c  sound.h
demos/ffs_3d/: CMakeLists.txt  mainloop.c
demos/simplebuild/: main.c
docs/: HandmadeHero_LinksAndReferences.md
docs/doxygen/: Doxyfile
docs/sphinx/source/: conf.py  index.rst
tools/simplebuild/: README.md  pyproject.toml  simplebuild.py
tools/simplebuild/docs/: EnvAfterVCVarsAllx64.txt
