project('gfs', 'c')


executable(
  'gfs',
  'code/gfs_string.c',
  'code/gfs_string.h',
  'code/gfs_physics.h',
  'code/gfs_physics.c',
  'code/gfs_memory.h',
  'code/gfs_memory.c',
  'code/gfs_string.h',
  'code/gfs_string.c',
  'code/gfs_wave.h',
  'code/gfs_wave.c',
  'code/gfs_static_assert.h',
  'code/gfs_assert.h',
  'code/gfs_types.h',
  'code/gfs_macros.h',
  'code/gfs_render.h',
  'code/gfs_render.c',
  'code/gfs_render_opengl.h',
  'code/gfs_render_opengl.c',
  'code/gfs_platform.h',
  'code/gfs_platform_win32.c',
  'code/gfs_game.c',
  'code/gfs_game.h',
  'code/gfs_game_state.c',
  'code/gfs_game_state.h',

  win_subsystem : 'windows',
)
